p7/tests/t093.err
Semantic error on line 7: Invalid right operand for operator '+'.
Semantic error on line 8: Invalid right operand for operator '+'.
Semantic error on line 9: Invalid left operand for operator '+'.
Semantic error on line 10: Invalid left operand for operator '+'.
Semantic error on line 11: Invalid left operand for operator '+'.
Semantic error on line 11: Invalid right operand for operator '+'.
